@@ -43,6 +43,7 @@ enum MalagaSymbol {
 	MS_PARTICIPLE,
 	MS_POSSESSIVE,
 	MS_KYSYMYSLIITE,
+	MS_FOCUS,
 	MS_LAST_SYMBOL
 };
 
