@@ -1,3 +1,6 @@
+2011-05-07 Harri Pitkänen <hatapitk@iki.fi>
+	* Support FOCUS in Malaga analyzer.
+
 2011-05-05 Harri Pitkänen <hatapitk@iki.fi>
 	* Support KYSYMYSLIITE in Malaga analyzer.
 
